fix(core): update tabs font and spacing

--- a/app/less/breadcrumbs.less
+++ b/app/less/breadcrumbs.less
@@ -20,7 +20,7 @@
       font-family: "icon-orange";
       content: "\e93e"; // Unicode space added since inline-block means non-collapsing white-space
       // TODO put those values in variable-orange file
-      padding: 0 8px 0 5px;//@breadcrumb-separator-padding-vertical @breadcrumb-separator-padding-horizontal;
+      padding: @breadcrumb-separator-padding-vertical @breadcrumb-separator-padding-horizontal;//0 8px 0 5px;//@breadcrumb-separator-padding-vertical @breadcrumb-separator-padding-horizontal;
       color: @breadcrumb-color;
       font-size: @breadcrumb-separator-size;
     }
